--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 .DS_Store
-node_modules
-/dist
-example.html
-favicon.ico
-# local env files
-.env.local
-.env.*.local
-
-# Log files
+node_modules/
+dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+**/*.log
+
+**/*.iml
+
+tests/**/coverage/
+tests/e2e/reports
+selenium-debug.log
 
 # Editor directories and files
 .idea
@@ -19,4 +19,7 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
-*.sw*
+*.local
+
+package-lock.json
+yarn.lock
